--- a/index.html
+++ b/index.html
@@ -1,10 +1,93 @@
 <!DOCTYPE html>
-<html>
-<body style="background:#0b1020;color:white;font-family:system-ui">
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>RiskLens Universal Risk Intelligence Engine</title>
 
-<h1>RiskLens Dashboard Live</h1>
+<style>
 
-<p>System operational.</p>
+body{
+margin:0;
+font-family:Arial,Helvetica,sans-serif;
+background:#0b1020;
+color:white;
+}
+
+.header{
+background:#111633;
+padding:15px;
+font-size:22px;
+font-weight:bold;
+}
+
+.container{
+padding:20px;
+}
+
+.card{
+background:#151a3a;
+padding:20px;
+margin-bottom:15px;
+border-radius:8px;
+}
+
+.metric{
+font-size:28px;
+color:#00ffaa;
+}
+
+.status{
+color:#00ffaa;
+font-weight:bold;
+}
+
+.alert{
+color:#ff4d4d;
+font-weight:bold;
+}
+
+</style>
+</head>
+
+<body>
+
+<div class="header">
+RiskLens Universal Risk Intelligence Engine
+</div>
+
+<div class="container">
+
+<div class="card">
+System Status: <span class="status">LIVE</span>
+</div>
+
+<div class="card">
+Total Entities Monitored<br>
+<div class="metric">2,847</div>
+</div>
+
+<div class="card">
+Active Risk Alerts<br>
+<div class="alert">12 High Risk Events</div>
+</div>
+
+<div class="card">
+Fraud Probability Index<br>
+<div class="metric">0.27</div>
+</div>
+
+<div class="card">
+Global Coverage<br>
+72 Countries
+</div>
+
+<div class="card">
+Engine Mode<br>
+Autonomous Intelligence Active
+</div>
+
+</div>
 
 </body>
 </html>
